// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FundMultipleOffers renders correctly when disabled 1`] = `
<View
  style={
    {
      "gap": 12,
    }
  }
>
  <Checkbox
    checked={false}
    onPress={[Function]}
  >
    fund multiple offers
  </Checkbox>
</View>
`;

exports[`FundMultipleOffers renders correctly when enabled 1`] = `
<View
  style={
    {
      "gap": 12,
    }
  }
>
  <Checkbox
    checked={true}
    onPress={[Function]}
  >
    fund multiple offers
  </Checkbox>
  <NumberStepper
    max={10}
    min={3}
    onChange={[Function]}
    value={4}
  />
</View>
`;
